ci: Add master branch and workflow_dispatch to CI workflow

--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -4,11 +4,14 @@ on:
   push:
     branches:
       - main
+      - master
     tags:
       - 'v*'
   pull_request:
     branches:
       - main
+      - master
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
