--- a/deploy/helm-chart/templates/cronjob-helm-upgrade-pr.yaml
+++ b/deploy/helm-chart/templates/cronjob-helm-upgrade-pr.yaml
@@ -40,6 +40,7 @@ spec:
                 - /bin/sh
                 - -c
                 - |
+                  rm -rf /repo/* /repo/.[!.]* 2>/dev/null || true
                   git clone --depth 1 --branch {{ .Values.git.mainBranch }} \
                     https://x-access-token:${GITHUB_TOKEN}@github.com/{{ .Values.helm.autoPR.repoOwner }}/{{ .Values.helm.autoPR.repoName }}.git \
                     /repo
