fix(helm): use metrics.port for metrics containerPort to remove duplicate 8080
The web deployment had both http and metrics ports resolving to the same
containerPort 8080, causing ArgoCD diff failures with "duplicate entries
for key [containerPort=8080,protocol=TCP]".

--- a/deploy/helm-chart/templates/deployment-web.yaml
+++ b/deploy/helm-chart/templates/deployment-web.yaml
@@ -51,7 +51,7 @@ spec:
               protocol: TCP
             {{- if .Values.metrics.enabled }}
             - name: metrics
-              containerPort: {{ .Values.web.port | default 8080 }}
+              containerPort: {{ .Values.metrics.port }}
               protocol: TCP
             {{- end }}
           livenessProbe:
